--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "@shadcn-svelte/monorepo",
+	"name": "@id-ego/shadcn-svelte",
 	"version": "0.0.1",
-	"description": "monorepo for shadcn-svelte",
+	"description": "shadcn-svelte 한글 문서",
 	"author": {
-		"name": "huntabyte",
-		"url": "https://twitter.com/huntabyte"
+		"name": "id-ego",
+		"url": "https://github.com/id-ego"
 	},
 	"private": true,
 	"scripts": {
@@ -32,7 +32,7 @@
 	"packageManager": "pnpm@10.25.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/huntabyte/shadcn-svelte.git"
+		"url": "https://github.com/id-ego/shadcn-svelte.git"
 	},
 	"license": "MIT",
 	"type": "module",
